2007-04-11  Mike Frysinger  <vapier@gentoo.org>

	* doc/syntax/asm.nanorc, doc/syntax/c.nanorc,
	doc/syntax/sh.nanorc: Copy the regex that highlights trailing
	whitespace from doc/syntax/java.nanorc to these files, as it's
	also useful in them.  (With minor tweaks by DLR.)

2007-04-04  David Lawrence Ramsey  <pooka109@gmail.com>

	* AUTHORS, faq.html: Update email address.
	* winio.c (get_escape_seq_kbinput): Add escape sequences for
	Terminal.

2007-02-01  Benno Schulenberg  <bensberg@justemail.net>

	* global.c (shortcut_init): Reword the movement shortcut
	descriptions so that they use "Go to" instead of "Move to",
	since not all of them move the cursor in the same way.
	* global.c (shortcut_init): Reword the paragraph movement
	shortcut descriptions to more accurately describe how they work.
	* nano.c (usage): Reword the description of the -S/--smooth
	command line option in order to differentiate it from the
	associated toggle description.

2007-01-29  David Lawrence Ramsey  <pooka109@cox.net>

	* ChangeLog: Rework the 2.1 branch's changelog to be more
	readable, per Jordi Mallach's suggestion.
	* ChangeLog.pre-2.1: Move the 2.0 branch's changelog here, per
	Jordi Mallach's suggestion.
	* Makefile.am: Add ChangeLog.pre-2.1 to EXTRA_DIST.
	* src/help.c (help_init): Add a missing space to the "Execute
	Command" help text.